# frankenmermaid

./: .gitignore  .ubsignore  AGENTS.md  CHANGELOG.md  Cargo.toml  FEATURE_PARITY.md  PLAN_TO_PORT_FRANKENTUI_MERMAID_TO_RUST.md  README.md  UPGRADE_LOG.md  build-wasm.sh  frankenmermaid_demo_showcase.html
.beads/: issues.jsonl
.beads/.br_history/: issues.20260227_215238.jsonl  issues.20260227_215355.jsonl  issues.20260227_222237.jsonl  issues.20260227_222325.jsonl  issues.20260227_222542.jsonl  issues.20260312_112049_799685728.jsonl
.benchmarks/: BLOCKER_render_perf_double_gated.md  FINDING_golden_svg_RED_first_edge_title_drop.md  STATE_2026-06-29_conformance_red_persists.md  a11y_contract_SETTLED_mermaid_emits_none.md  accent_digit_table_WIN.md  accent_digit_table_harvest_complete_WIN.md  barycenter_dense_rank_WIN.md  barycenter_flat_csr.md  barycenter_single_pass_WIN.md  bd-9w78_HANDOFF_cc_fm_to_StormyEagle.md  bd_1buv_2_endpoint_temporal_cache_NEGATIVE.md  bd_1buv_2_endpoint_temporal_cache_SETTLED.md  bd_1buv_2_fast_edge_scan_fusion_NEGATIVE.md  bd_1buv_2_flow_line_table_stream_NEGATIVE.md  bd_1buv_2_flowchart_parse_layout_floor_ANALYSIS.md  bd_1buv_2_node_metadata_micro_sweep_NEGATIVE.md  bd_1buv_2_numeric_dense_endpoint_NEGATIVE.md  bd_1buv_2_numeric_endpoint_index_NEGATIVE.md  bd_1buv_2_numeric_node_index_NEGATIVE.md  bd_1buv_2_parse_layout_svg_floor_NEGATIVE.md  bd_1buv_58_minimap_overlay_stream_NEGATIVE.md  bk_dense_lookup_WIN.md  calibration_small_bench_noise_and_detect_floor.md  certification_substrate_findings_cc_fm.md  class_member_nodeid_hoist_WIN.md  crossing_min_rejections_benched_dead_code.md  crossing_refinement_local_NEGATIVE.md  cyclic_crossing_count_fxhashmap_NEGATIVE.md  edge_a11y_is_19pct_render_MEASURED.md  edge_pair_count_fxhashmap.md  edge_routing_aabb_prefilter.md  edge_routing_obstacle_build_once.md  edge_routing_obstacle_index_csr.md  edge_routing_obstacle_index_dense.md  edge_routing_obstacle_spatial_index.md  golden_svg_RED_root_cause_edge_fast_path.md  harness_calibration_published_settings.md  incremental_arc_diagram_layout_WIN.md  incremental_bench_mimalloc_fidelity_FINDING.md  incremental_dependency_graph_key_endpoint_hash.md  (+62 more)
.benchmarks/headtohead/: run-5f3e3614-1783648896384.jsonl  run-aafe1c11-1783649771991.jsonl  summary-5f3e3614-1783648896384.json  summary-aafe1c11-1783649771991.json
.cargo/: config.toml
.ci/: perf-baseline.json  quality-gates.toml  release-gate-overrides.toml  release-signoff.toml  slo.yaml
.github/workflows/: ci.yml
crates/fm-cli/: Cargo.toml
crates/fm-cli/benches/: pipeline_bench.rs
crates/fm-cli/examples/: gen_shared.rs  headtohead.rs  idhash.rs  idhash2.rs  probe_alldisp.rs  probe_bench.rs  probe_classes.rs  probe_ded.rs  probe_disp.rs  probe_disp2.rs  probe_fixture.rs  probe_gedge.rs  probe_marker.rs  probe_mm.rs  probe_mmhash.rs  probe_radial.rs  probe_rich.rs  probe_styled.rs  probe_subg.rs  profharness.rs
crates/fm-cli/src/: main.rs  minimize.rs
crates/fm-cli/tests/: benchmark_regression_harness.rs  canary_rollout_drills.rs  config_roundtrip_test.rs  corpus_ingestion.rs  debug_test.rs  fnx_baseline_invariants.rs  fnx_differential_report.rs  fnx_directed_rollout_gate.rs  fnx_e2e_scenarios.rs  frankentui_conformance_cases.json  frankentui_conformance_test.rs  golden_layout_test.rs  golden_svg_test.rs  integration_test.rs  invariant_proof_harness.rs  phase1_rollout_gate.rs  spectral_bug_test.rs
crates/fm-cli/tests/fixtures/frankentui_conformance/: architecture_basic.mmd  c4context_basic.mmd  flowchart_basic.mmd  kanban_basic.mmd  packet_basic.mmd  quadrant_basic.mmd  requirement_basic.mmd
crates/fm-cli/tests/golden/: class_basic.mmd  flowchart_cycle.mmd  flowchart_simple.mmd  gantt_basic.mmd  layout_checksums.json  malformed_recovery.mmd  pie_basic.mmd  state_basic.mmd  xychart_comprehensive.mmd
crates/fm-core/: Cargo.toml
crates/fm-core/examples/: fm_dims_ab.rs
crates/fm-core/src/: art.rs  canary.rs  cga.rs  constraints.rs  evidence.rs  font_metrics.rs  leapfrog.rs  lens_tests.rs  lib.rs  quotient_filter.rs  succinct.rs
crates/fm-core/tests/: fxhash_resilience.rs  test_cga.rs
crates/fm-layout/: Cargo.toml
crates/fm-layout/benches/: barycenter_sweep.rs  crossing_minimization.rs  harness_calibration.rs  incremental_layout.rs
crates/fm-layout/proptest-regressions/: lib.txt
crates/fm-layout/src/: cache_oblivious.rs  cga_routing.rs  delta_debug.rs  egraph_crossing.rs  egraph_ordering.rs  fnx_adapter.rs  fnx_budget.rs  fnx_cache.rs  fnx_cycle_scorer.rs  fnx_diagnostics.rs  fnx_directed.rs  fnx_ordering.rs  lib.rs  persistence.rs  polyhedral.rs  shapes.rs  spatial.rs  spectral.rs  test_cycle_removal.rs
crates/fm-parser/: Cargo.toml
crates/fm-render-canvas/: Cargo.toml
crates/fm-render-svg/: Cargo.toml
crates/fm-render-svg/proptest-regressions/: lib.txt
crates/fm-render-svg/src/: a11y.rs  attributes.rs  cga_transform.rs  defs.rs  document.rs  element.rs  lib.rs  path.rs  text.rs  theme.rs  transform.rs
crates/fm-render-term/: Cargo.toml
crates/fm-wasm/: Cargo.toml
crates/fm-wasm/src/: lib.rs
docs/: CROSS_REPO_RECOMMENDATION_bench_harness_contract.md  FNX_INTEGRATION.md  FNX_MIGRATION.md  NEGATIVE_EVIDENCE.md  PROPOSAL_default_output_profile.md
evidence/: TEMPLATE.md  capability_matrix.json  capability_scenario_matrix.json  demo_strategy.md  pattern_inventory.md
evidence/contracts/: bidirectional-lenses.md  conformal-geometric-algebra.md  (+8 more)
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/fuzz_parse/: class.txt  dot.txt  er.txt  flowchart.txt  gantt.txt  mindmap.txt  pie.txt  sequence.txt  state.txt  typo.txt
fuzz/fuzz_targets/: fuzz_detect.rs  fuzz_parse.rs  fuzz_pipeline.rs
pkg/: frankenmermaid.d.ts  frankenmermaid.js  frankenmermaid_bg.wasm  frankenmermaid_bg.wasm.d.ts  package.json
scripts/: mermaid_headtohead_cc.mjs  run_static_web_e2e.py  showcase_harness.py  verify_demo_samples.mjs
tests/: dot_bug_test.rs  sequence_fragment_test.rs  test_showcase_harness.py  test_static_web_e2e.py
web/: _headers  index.html
web_react/: _headers  index.html
(+398 files in other folders)
