[workspace]
members = [
    "crates/fm-core",
    "crates/fm-parser",
    "crates/fm-layout",
    "crates/fm-render-svg",
    "crates/fm-render-canvas",
    "crates/fm-render-term",
    "crates/fm-wasm",
    "crates/fm-cli",
    "crates/fm-regression-harness",
]
default-members = ["crates/fm-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
rust-version = "1.95"
repository = "https://github.com/Dicklesworthstone/frankenmermaid"
homepage = "https://github.com/Dicklesworthstone/frankenmermaid"

[workspace.dependencies]
fm-core = { path = "crates/fm-core" }
fm-parser = { path = "crates/fm-parser" }
fm-layout = { path = "crates/fm-layout" }
fm-render-svg = { path = "crates/fm-render-svg" }
fm-render-canvas = { path = "crates/fm-render-canvas" }
fm-render-term = { path = "crates/fm-render-term" }
fm-wasm = { path = "crates/fm-wasm" }
franken-kernel = "0.3.4"
fnx-runtime = { git = "https://github.com/Dicklesworthstone/franken_networkx.git", rev = "cb8bdb590573b9de5ddbc26b948279057ac4049e", default-features = false }
fnx-classes = { git = "https://github.com/Dicklesworthstone/franken_networkx.git", rev = "cb8bdb590573b9de5ddbc26b948279057ac4049e", default-features = false }
fnx-algorithms = { git = "https://github.com/Dicklesworthstone/franken_networkx.git", rev = "cb8bdb590573b9de5ddbc26b948279057ac4049e", default-features = false }
fnx-views = { git = "https://github.com/Dicklesworthstone/franken_networkx.git", rev = "cb8bdb590573b9de5ddbc26b948279057ac4049e", default-features = false }

anyhow = "1.0.102"
chumsky = { version = "0.10", default-features = false, features = ["std"] }
clap = { version = "4.5.60", features = ["derive"] }
js-sys = "0.3.85"
rustc-hash = "2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
thiserror = "2.0.18"
nalgebra = "0.33"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3.85", features = ["CanvasRenderingContext2d", "EventTarget", "HtmlCanvasElement", "TextMetrics"] }
# `std::time::Instant::now()` PANICS on wasm32-unknown-unknown ("time not implemented on this
# platform"), which under `panic = "abort"` lowers to an `unreachable` trap — every browser
# render call that timed a pipeline stage aborted with `RuntimeError: unreachable` (GH#3).
# web-time is a drop-in: it re-exports `std::time` off-wasm and backs Instant with
# `performance.now()` on wasm32-unknown-unknown.
web-time = "1.1.0"
good_lp = { version = "1.15.0", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Native release builds optimize the hot pipeline crates for SPEED (opt-level=3), not the
# workspace-default size ("z"). The native CLI is not size-constrained, and opt="z" disables
# the inlining/vectorization that the number-formatting and byte-scan hot paths depend on
# (measured: the opt=3 profharness consistently beats the opt="z" bench for identical code).
# The wasm build (build-wasm.sh) overrides each of these back to "z" via `--config` so the
# wasm bundle stays small. fm-layout has used this split since before; extended to the rest.
[profile.release.package.fm-layout]
opt-level = 3

[profile.release.package.fm-parser]
opt-level = 3

[profile.release.package.fm-render-svg]
opt-level = 3

[profile.release.package.fm-core]
opt-level = 3

[profile.dev.package.fm-layout]
opt-level = 3
