[package]
name = "fm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"
fm-parser = { path = "../crates/fm-parser" }
fm-core = { path = "../crates/fm-core" }
fm-layout = { path = "../crates/fm-layout" }
fm-render-svg = { path = "../crates/fm-render-svg" }
fm-render-term = { path = "../crates/fm-render-term" }

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
doc = false

[[bin]]
name = "fuzz_detect"
path = "fuzz_targets/fuzz_detect.rs"
doc = false

[[bin]]
name = "fuzz_pipeline"
path = "fuzz_targets/fuzz_pipeline.rs"
doc = false

[workspace]
