[package]
name = "fm-core"
description = "Core IR types, configuration, and diagnostics for FrankenMermaid diagram engine"
keywords = ["mermaid", "diagram", "ir", "ast", "graphics"]
categories = ["data-structures", "visualization"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
franken-kernel.workspace = true
# Already in the workspace lock (transitively via fm-parser); promoting to a direct dep is
# zero bundle cost and exposes memchr's SIMD `\n` scan for the font-metrics line splitters.
memchr = "2"
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
