[package]
name = "fm-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
fm-core.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest = "1.6.0"
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
