[package]
name = "fm-layout"
description = "Deterministic layout engine for diagram IR with multiple algorithm support"
keywords = ["layout", "diagram", "graph", "sugiyama", "mermaid"]
categories = ["algorithms", "visualization"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
bench-internals = []
fnx-integration = [
    "dep:fnx-runtime",
    "dep:fnx-classes",
    "dep:fnx-algorithms",
    "dep:fnx-views",
]
fnx-experimental-directed = ["fnx-integration"]

[dependencies]
fm-core.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
egg = "0.11.0"
# Inline storage for short edge paths (already in the lock via transitive deps): every
# routed edge is 2-5 points, so `SmallVec<[LayoutPoint; 8]>` keeps `LayoutEdgePath.points`
# heap-free — eliding one malloc+free per edge and giving render sequential (cache-local)
# point access instead of chasing a per-edge heap pointer.
smallvec = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nalgebra.workspace = true
good_lp = { workspace = true, features = ["highs"] }
fnx-runtime = { workspace = true, optional = true }
fnx-classes = { workspace = true, optional = true }
fnx-algorithms = { workspace = true, optional = true }
fnx-views = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing = { workspace = true, features = ["release_max_level_off"] }

[dev-dependencies]
proptest = "1.6.0"
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
criterion = { version = "0.5", features = ["html_reports"] }
# Lets the bench self-report the sha256 of its own ELF, so the certified binary identity comes
# from inside the measured process rather than from a separate (unpinnable) shell step.
sha2 = "0.10.9"

[[bench]]
name = "incremental_layout"
harness = false

[[bench]]
name = "crossing_minimization"
harness = false

# Same-binary A/B for the barycenter sweep (bd-9w78). The hand-rolled paired sampler alternates
# both arms within each sample; sequential Criterion group members would not cancel drift.
[[bench]]
name = "barycenter_sweep"
harness = false
required-features = ["bench-internals"]
