[package]
name = "fm-render-svg"
description = "Zero-dependency SVG renderer for FrankenMermaid diagram IR"
keywords = ["svg", "render", "diagram", "mermaid", "graphics"]
categories = ["rendering::graphics-api", "visualization"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fm-core.workspace = true
fm-layout.workspace = true
serde_json.workspace = true
# SIMD substring/byte search for the CSS post-passes (strip/minify), whose str::find/contains built
# a TwoWaySearcher per call — ~47% of small-diagram render self-time. Already in the workspace lock
# (fm-parser depends on it for SIMD newline counting), so promoting it here is zero bundle cost.
memchr = "2"

[dev-dependencies]
fm-parser.workspace = true
proptest = "1.6.0"
