[package]
name = "fm-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fm-core.workspace = true
fm-layout.workspace = true
fm-parser.workspace = true
fm-render-canvas.workspace = true
fm-render-svg.workspace = true
js-sys.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
